[package]
name = "phonograph-desktop"
version = "1.3.18"
description = "Desktop shell for the Phonograph podcast player"
authors = ["Phonograph Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
