[package]
name = "phonograph_desktop"
version = "1.3.19"
description = "Phonograph desktop shell"
authors = ["Phonograph Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
