[package]
name = "phonograph"
version = "1.3.19"
description = "Phonograph desktop shell"
authors = ["Phonograph Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
